# mgpcl

./: .gitignore  CMakeLists.txt  COPYING  CRC32_Poly.lua  LICENSE  MGPCL.sln  MGPCL.vcxproj  MGPCL.vcxproj.filters  QueueOverList.xlsx  README.md  RandomDistribution.xlsx  mgpcl_serial.ino
include/mgpcl/: AES.h  Allocator.h  Assert.h  Atomic.h  BasicLogger.h  BasicParser.h  BigNumber.h  Bitfield.h  BufferIOStream.h  BufferedOStream.h  ByteBuf.h  CPUInfo.h  CRC32_Poly.h  Color.h  Complex.h  Cond.h  Config.h  Config.h.in  ConsoleUtils.h  DataIOStream.h  DataSerializer.h  Date.h  Enums.h  FFT.h  File.h  FileIOStream.h  FlatMap.h  Future.h  GUI.h  HMAC.h  HTTPCommons.h  HTTPCookieJar.h  HTTPRequest.h  HTTPServer.h  HashMap.h  Hasher.h  INet.h  (+63 more)
net-logger/: build.gradle
src/: AES.cpp  Assert.cpp  BasicLogger.cpp  BigNumber.cpp  CMakeLists.txt  CPUInfo.cpp  ConsoleUtils.cpp  Date.cpp  FFT.cpp  File.cpp  FileIOStream.cpp  GUI.cpp  HMAC.cpp  HTTPCommons.cpp  HTTPCookieJar.cpp  HTTPRequest.cpp  HTTPServer.cpp  INet.cpp  IPv4Address.cpp  JSON.cpp  Keyboard.cpp  LinuxSpecific.cpp  Logger.cpp  MsgBox.cpp  NetLogger.cpp  Pattern.cpp  Process.cpp  ProgramArgs.cpp  RSA.cpp  Random.cpp  ReadWriteLock.cpp  SHA.cpp  SSLContext.cpp  SSLSocket.cpp  Scheduler.cpp  SerialIO.cpp  SharedObject.cpp  SimpleConfig.cpp  StringIOStream.cpp  TCPClient.cpp  (+13 more)
test/: CMakeLists.txt  FS.cpp  GUI.cpp  HTTPServerTest.cpp  HTTPServerTest.h  HashMap.cpp  IO.cpp  JSON.cpp  List.cpp  Logging.cpp  Main.cpp  Misc.cpp  Net.cpp  Processes.cpp  ProgramArgs.cpp  Random.cpp  StackIntegrityChecker.cpp  StackIntegrityChecker.h  String.cpp  Test.vcxproj  Test.vcxproj.filters  TestAPI.cpp  TestAPI.h  TestObject.cpp  TestObject.h  Threading.cpp  certificate.pem  fft.csv  insert.ini  key.pem  samples.csv  test.json  test_private.pem  test_public.pem
(+3 files in other folders)
